data/derived/sp14/progs/unify/prog4779.ml.out
Characters 396-408:
  | Flatten (e1,e2,e3) -> (eval(e1,x,y) / eval(e2,x,y)/ eval(e3,x,y));;
                           ^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
